fix(styles): fixed styles mis-alignments

--- a/src/styles/form-item.scss
+++ b/src/styles/form-item.scss
@@ -15,6 +15,16 @@ $fd-form-label-spacing: 0.5rem !default;
   display: flex;
   align-content: center;
   flex-direction: column;
+  padding-bottom: 0.625rem;
+
+  .#{$fd-namespace}-input {
+    margin-top: 0;
+    margin-bottom: 0;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 
   &--horizontal {
     flex-direction: row;
